unpackaged/main/default/objects/project_cloud__Work__c/project_cloud__Work__c.object-meta.xml
<CustomObject>
    <description>Record time or create allocations against any object, by adding a lookup to that Object.
Replacement for the Time Entry Object.</description>
    <label>Work</label>
    <nameField>
        <displayFormat>W-{000000000}</displayFormat>
        <label>Work Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>