unpackaged/main/default/objects/project_cloud__Work__c/fields/ccpe_r__Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Cost__c</fullName>
    <formula>ccpe_r__Hourly_Cost__c * project_cloud__Hours__c</formula>
    <label>Calculated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>