unpackaged/main/default/objects/project_cloud__Work__c/fields/ccpe_r__Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>