unpackaged/main/default/objects/project_cloud__Work__c/fields/ccpe_r__Multiplier__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>