unpackaged/main/default/objects/project_cloud__Work__c/fields/ccpe_r__Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Rate__c</fullName>
    <formula>ccpe_r__Hourly_Rate__c * project_cloud__Hours__c * IF(ISBLANK(ccpe_r__Multiplier__c), 1, ccpe_r__Multiplier__c)</formula>
    <label>Calculated Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>