unpackaged/main/default/objects/project_cloud__Work__c/fields/ccpe_r__Retainer_Line_Item_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Retainer_Line_Item_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retainer Line Item</label>
    <referenceTo>ccpe_r__Retainer_Line_Item__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>