unpackaged/main/default/objects/project_cloud__Work__c/fields/ccpe_r__Timesheet_Start__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Timesheet_Start__c</fullName>
    <description>This field is required to calculate the Utilization Hash. It is a convenience field that is used to save 2 queries in the trigger by having the value available on the Time Entry object.</description>
    <formula>project_cloud__Timesheet__r.project_cloud__Start__c</formula>
    <inlineHelpText>This is a System field and Should not be visible.</inlineHelpText>
    <label>Timesheet Start</label>
    <type>Date</type>
</CustomField>