unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Administration__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Administration__c</fullName>
    <inlineHelpText>This field controls what type of &#39;Admin&#39; time entries users can enter time against.</inlineHelpText>
    <label>Administration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>