unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Allocation_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocation_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field that allows a rollup of worked hours against a given allocation</description>
    <inlineHelpText>allows a rollup of worked hours against a given allocation</inlineHelpText>
    <label>Allocation</label>
    <referenceTo>project_cloud__Allocation__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>