unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Board_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show the Board of the Card that the work entry relates to.</inlineHelpText>
    <label>Board (Rollup)</label>
    <referenceTo>project_cloud__Board__c</referenceTo>
    <relationshipLabel>Work (Rollup)</relationshipLabel>
    <relationshipName>Work_Rollup</relationshipName>
    <type>Lookup</type>
</CustomField>