unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Case__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show what Case a Work Entry is related to.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>