unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Comment__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Comment__c</fullName>
    <inlineHelpText>Allows users to enter in comments for the time they have entered.</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>