unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date__c</fullName>
    <inlineHelpText>This field shows what the date that the work took place.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>