unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hash__c</fullName>
    <formula>CASESAFEID(project_cloud__Parent__c) &amp; CASESAFEID(RecordTypeId) &amp; CASESAFEID(OwnerId) &amp; TEXT(project_cloud__Date__c)</formula>
    <inlineHelpText>This field helps detect and prevent Capability duplicates.</inlineHelpText>
    <label>Hash</label>
    <type>Text</type>
</CustomField>