unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__HHmm__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__HHmm__c</fullName>
    <description>Alternative input for entering time using the HH:mm:ss format. This value is converted to a decimal and overwrites any value in the Hours__c field.</description>
    <inlineHelpText>This field will override the number set in the Hours (number) field.</inlineHelpText>
    <label>Hours</label>
    <length>12</length>
    <type>Text</type>
</CustomField>