unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours__c</fullName>
    <inlineHelpText>This field will display the amount of time that was entered against the specific administration type or against the object on the timecard.</inlineHelpText>
    <label>Hours (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>