unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Parent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent__c</fullName>
    <description>The Id of the Parent Object the Work is related to</description>
    <inlineHelpText>This field will show the ID of the object the work entry relates too.</inlineHelpText>
    <label>Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>