unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Owner__c</fullName>
    <description>This field is used as part of a Customer&#39;s Time Entry (Work) approval process. (The Id is used instead of the Owners Name as the Id is fixed and not prone to introducing errors by accidental editing)</description>
    <formula>CASESAFEID(project_cloud__Project_CCPE_Ignore__r.OwnerId)</formula>
    <inlineHelpText>This field is used as part of a Customer&#39;s Time Entry (Work) approval process.</inlineHelpText>
    <label>Project Owner Id (For Time Approvals)</label>
    <type>Text</type>
</CustomField>