unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Project_Owner_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Owner_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show the Project Owner of the Project that the work entry relates to.</inlineHelpText>
    <label>Project Owner (Lookup)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Owner_Work</relationshipName>
    <type>Lookup</type>
</CustomField>