unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Project_Phase_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Phase_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show the Project Phase of the Project Task that the work entry relates to.</inlineHelpText>
    <label>Project Phase (Rollup)</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Work (Rollup)</relationshipLabel>
    <relationshipName>Work_Rollup</relationshipName>
    <type>Lookup</type>
</CustomField>