unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Project_Rollup_Name__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Rollup_Name__c</fullName>
    <description>The TimeEntryConfiguration trigger copies the name of the parent Project if it exists to this field.</description>
    <inlineHelpText>If the Time Entry is related to a Project object, the name of the Project is copied to this field. This is intended for reporting uses</inlineHelpText>
    <label>Deprecated (Project Rollup, use lookup)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>