unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Ticket__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show the Ticket the work entry relates to.</inlineHelpText>
    <label>Ticket</label>
    <referenceTo>project_cloud__Ticket__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>