unpackaged/main/default/objects/project_cloud__Work__c/fields/project_cloud__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Timesheet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This field will show the Timesheet the work entry relates to.</inlineHelpText>
    <label>Timesheet</label>
    <referenceTo>project_cloud__Timesheet__c</referenceTo>
    <relationshipLabel>Work Entries</relationshipLabel>
    <relationshipName>Work_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>