unpackaged/main/default/objects/project_cloud__Work__c/recordTypes/project_cloud__Allocation.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Allocation</fullName>
    <active>true</active>
    <description>Calendar Allocations are for allocating a project task to a user for a certain number of hours on a certain day</description>
    <label>Calendar Allocation</label>
</RecordType>