unpackaged/main/default/objects/project_cloud__Work__c/recordTypes/project_cloud__Subscription.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Subscription</fullName>
    <active>true</active>
    <description>Subscriptions are for assigning a person or team to a Project, Project Phase or Project Task, thus making it visible on their Collaboration Tab</description>
    <label>Subscription</label>
</RecordType>