unpackaged/main/default/objects/project_cloud__Work__c/recordTypes/project_cloud__Time_Entry.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Time_Entry</fullName>
    <active>true</active>
    <description>Time Entries are records of actual work completed by a person. They can be related to any object.</description>
    <label>Time Entry</label>
</RecordType>