unpackaged/main/default/objects/project_cloud__Work__c/validationRules/project_cloud__Allocations_Project_Tasks_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Allocations_Project_Tasks_Only</fullName>
    <active>true</active>
    <description>Calendar Allocations can only be created against Project Tasks</description>
    <errorConditionFormula>$RecordType.DeveloperName == &#39;Allocation&#39; &amp;&amp; ISBLANK(project_cloud__Project_Task__c)</errorConditionFormula>
    <errorMessage>Allocations can only be created for Project Tasks</errorMessage>
</ValidationRule>