unpackaged/main/default/objects/project_cloud__Work__c/validationRules/project_cloud__Subscriptions_Projects_Phase_Tasks_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Subscriptions_Projects_Phase_Tasks_Only</fullName>
    <active>true</active>
    <description>Subscriptions can only be created against Projects, Project Phases and Project Tasks</description>
    <errorConditionFormula>$RecordType.DeveloperName == &#39;Subscription&#39; &amp;&amp;
ISBLANK(project_cloud__Project__c) &amp;&amp;
ISBLANK(project_cloud__Project_Phase__c) &amp;&amp;
ISBLANK(project_cloud__Project_Task__c )</errorConditionFormula>
    <errorMessage>Subscriptions can only be created against Projects, Project Phases and Project Tasks</errorMessage>
</ValidationRule>