unpackaged/main/default/objects/project_cloud__Work__c/validationRules/project_cloud__Time_Entries_Must_Have_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Time_Entries_Must_Have_Hours</fullName>
    <active>true</active>
    <description>Time Entries require an hours value greater than 0</description>
    <errorConditionFormula>$RecordType.DeveloperName == &#39;Time_Entry&#39; &amp;&amp;
(ISBLANK(project_cloud__Hours__c) || NOT(project_cloud__Hours__c &gt; 0))</errorConditionFormula>
    <errorDisplayField>project_cloud__Hours__c</errorDisplayField>
    <errorMessage>Time Entries require an hours value greater than 0</errorMessage>
</ValidationRule>