unpackaged/main/default/objects/project_cloud__Work__c/validationRules/project_cloud__Time_Entries_Must_Have_Timesheet.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Time_Entries_Must_Have_Timesheet</fullName>
    <active>true</active>
    <description>Time Entries require a Timesheet to be selected</description>
    <errorConditionFormula>$RecordType.DeveloperName == &#39;Time_Entry&#39; &amp;&amp; ISBLANK(project_cloud__Timesheet__c)</errorConditionFormula>
    <errorDisplayField>project_cloud__Timesheet__c</errorDisplayField>
    <errorMessage>Time Entries require a Timesheet to be selected</errorMessage>
</ValidationRule>