unpackaged/main/default/objects/project_cloud__Work__c/listViews/project_cloud__All.listView-meta.xml
<ListView>
    <fullName>project_cloud__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>